<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.SingleTopActivity">

    <TextView
        android:id="@+id/textView"
        style="@style/activity_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="@string/single_top" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="20dp">

        <Button
            android:id="@+id/btnStandardLaunchActivity"
            style="@style/button_style"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/button_bg"
            android:text="@string/standard_launch" />

        <Button
            android:id="@+id/btnSingleTopActivity"
            style="@style/button_style"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_bg"
            android:text="@string/single_top" />

        <Button
            android:id="@+id/btnSingleTaskActivity"
            style="@style/button_style"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_bg"
            android:text="@string/single_task" />

        <Button
            android:id="@+id/btnSingleInstanceActivity"
            style="@style/button_style"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_bg"
            android:text="@string/single_instance" />
    </LinearLayout>
</LinearLayout>